+Header Animation +associated companies Section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header class="header-container text-primary w-85 m-auto mt-90">
+    <header class="text-primary max-w-90 m-auto mt-90">
       <nav id="navbar" class="flex justify-between items-center text-primary">
         <div id="brand" class="text-primary">Influencer products</div>
         <div class="menu">
@@ -90,5 +90,19 @@
         </div>
       </section>
     </header>
+
+    <section id="associated-companies" class="max-w-70 m-auto mt-90 py-30">
+      <hr />
+      <div class="flex justify-between items-center">
+        <div class="flex-item"><img src="logos/1.svg" alt="" /></div>
+        <div class="flex-item"><img src="logos/2.svg" alt="" /></div>
+        <div class="flex-item"><img src="logos/3.svg" alt="" /></div>
+        <div class="flex-item"><img src="logos/4.svg" alt="" /></div>
+        <div class="flex-item"><img src="logos/5.svg" alt="" /></div>
+        <div class="flex-item"><img src="logos/6.svg" alt="" /></div>
+        <div class="flex-item"><img src="logos/7.svg" alt="" /></div>
+      </div>
+      <hr />
+    </section>
   </body>
 </html>
