--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header class="text-primary max-w-90 m-auto mt-90">
+    <header class="header-container text-primary mx-auto mt-90">
       <nav id="navbar" class="flex justify-between items-center text-primary">
         <div id="brand" class="text-primary">Influencer products</div>
         <div class="menu">
@@ -91,7 +91,7 @@
       </section>
     </header>
 
-    <section id="associated-companies" class="max-w-70 m-auto mt-90 py-30">
+    <section id="associated-companies" class="container mx-auto mt-90 py-30">
       <hr />
       <div class="flex justify-between items-center">
         <div class="flex-item"><img src="logos/1.svg" alt="" /></div>
@@ -103,6 +103,174 @@
         <div class="flex-item"><img src="logos/7.svg" alt="" /></div>
       </div>
       <hr />
+    </section>
+    <section id="collections" class="container mx-auto">
+      <h2 class="text-center">Popular Collections</h2>
+      <div class="collection-items grid">
+        <!-- .item*9>.inner-container>(.item-image>img[src="images/$.png"])+(.item-content>(h2{Item Name $}+p.price{$100.00}+div.rating>(i.fas.fa-star.full*4+i.fas.fa-star-half-alt.half+p.rating-number{4.5})+p.description{Worldwide Shipping}+p.description{available}+p.description{Buyers protection possible!})) -->
+        <div class="item mx-auto">
+          <div class="inner-container">
+            <div class="item-image"><img src="images/1.png" alt="" /></div>
+            <div class="item-content">
+              <h2>Item Name 1</h2>
+              <p class="price">$1100.00</p>
+              <div class="rating">
+                <i class="fas fa-star full"></i><i class="fas fa-star full"></i
+                ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
+                ><i class="fas fa-star-half-alt half"></i>
+                <p class="rating-number">4.5</p>
+              </div>
+              <p class="description">Worldwide Shipping</p>
+              <p class="description">available</p>
+              <p class="description">Buyers protection possible!</p>
+            </div>
+          </div>
+        </div>
+        <div class="item mx-auto">
+          <div class="inner-container">
+            <div class="item-image"><img src="images/2.png" alt="" /></div>
+            <div class="item-content">
+              <h2>Item Name 2</h2>
+              <p class="price">$2100.00</p>
+              <div class="rating">
+                <i class="fas fa-star full"></i><i class="fas fa-star full"></i
+                ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
+                ><i class="fas fa-star-half-alt half"></i>
+                <p class="rating-number">4.5</p>
+              </div>
+              <p class="description">Worldwide Shipping</p>
+              <p class="description">available</p>
+              <p class="description">Buyers protection possible!</p>
+            </div>
+          </div>
+        </div>
+        <div class="item mx-auto">
+          <div class="inner-container">
+            <div class="item-image"><img src="images/3.png" alt="" /></div>
+            <div class="item-content">
+              <h2>Item Name 3</h2>
+              <p class="price">$3100.00</p>
+              <div class="rating">
+                <i class="fas fa-star full"></i><i class="fas fa-star full"></i
+                ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
+                ><i class="fas fa-star-half-alt half"></i>
+                <p class="rating-number">4.5</p>
+              </div>
+              <p class="description">Worldwide Shipping</p>
+              <p class="description">available</p>
+              <p class="description">Buyers protection possible!</p>
+            </div>
+          </div>
+        </div>
+        <div class="item mx-auto">
+          <div class="inner-container">
+            <div class="item-image"><img src="images/4.png" alt="" /></div>
+            <div class="item-content">
+              <h2>Item Name 4</h2>
+              <p class="price">$4100.00</p>
+              <div class="rating">
+                <i class="fas fa-star full"></i><i class="fas fa-star full"></i
+                ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
+                ><i class="fas fa-star-half-alt half"></i>
+                <p class="rating-number">4.5</p>
+              </div>
+              <p class="description">Worldwide Shipping</p>
+              <p class="description">available</p>
+              <p class="description">Buyers protection possible!</p>
+            </div>
+          </div>
+        </div>
+        <div class="item mx-auto">
+          <div class="inner-container">
+            <div class="item-image"><img src="images/5.png" alt="" /></div>
+            <div class="item-content">
+              <h2>Item Name 5</h2>
+              <p class="price">$5100.00</p>
+              <div class="rating">
+                <i class="fas fa-star full"></i><i class="fas fa-star full"></i
+                ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
+                ><i class="fas fa-star-half-alt half"></i>
+                <p class="rating-number">4.5</p>
+              </div>
+              <p class="description">Worldwide Shipping</p>
+              <p class="description">available</p>
+              <p class="description">Buyers protection possible!</p>
+            </div>
+          </div>
+        </div>
+        <div class="item mx-auto">
+          <div class="inner-container">
+            <div class="item-image"><img src="images/6.png" alt="" /></div>
+            <div class="item-content">
+              <h2>Item Name 6</h2>
+              <p class="price">$6100.00</p>
+              <div class="rating">
+                <i class="fas fa-star full"></i><i class="fas fa-star full"></i
+                ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
+                ><i class="fas fa-star-half-alt half"></i>
+                <p class="rating-number">4.5</p>
+              </div>
+              <p class="description">Worldwide Shipping</p>
+              <p class="description">available</p>
+              <p class="description">Buyers protection possible!</p>
+            </div>
+          </div>
+        </div>
+        <div class="item mx-auto">
+          <div class="inner-container">
+            <div class="item-image"><img src="images/7.png" alt="" /></div>
+            <div class="item-content">
+              <h2>Item Name 7</h2>
+              <p class="price">$7100.00</p>
+              <div class="rating">
+                <i class="fas fa-star full"></i><i class="fas fa-star full"></i
+                ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
+                ><i class="fas fa-star-half-alt half"></i>
+                <p class="rating-number">4.5</p>
+              </div>
+              <p class="description">Worldwide Shipping</p>
+              <p class="description">available</p>
+              <p class="description">Buyers protection possible!</p>
+            </div>
+          </div>
+        </div>
+        <div class="item mx-auto">
+          <div class="inner-container">
+            <div class="item-image"><img src="images/8.png" alt="" /></div>
+            <div class="item-content">
+              <h2>Item Name 8</h2>
+              <p class="price">$8100.00</p>
+              <div class="rating">
+                <i class="fas fa-star full"></i><i class="fas fa-star full"></i
+                ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
+                ><i class="fas fa-star-half-alt half"></i>
+                <p class="rating-number">4.5</p>
+              </div>
+              <p class="description">Worldwide Shipping</p>
+              <p class="description">available</p>
+              <p class="description">Buyers protection possible!</p>
+            </div>
+          </div>
+        </div>
+        <div class="item mx-auto">
+          <div class="inner-container">
+            <div class="item-image"><img src="images/9.png" alt="" /></div>
+            <div class="item-content">
+              <h2>Item Name 9</h2>
+              <p class="price">$9100.00</p>
+              <div class="rating">
+                <i class="fas fa-star full"></i><i class="fas fa-star full"></i
+                ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
+                ><i class="fas fa-star-half-alt half"></i>
+                <p class="rating-number">4.5</p>
+              </div>
+              <p class="description">Worldwide Shipping</p>
+              <p class="description">available</p>
+              <p class="description">Buyers protection possible!</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
