--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </div>
       <hr />
     </section>
-    <section id="collections" class="container mx-auto">
+    <section id="collections" class="container mx-auto mt-100">
       <h2 class="text-center">Popular Collections</h2>
       <div class="collection-items grid">
         <!-- .item*9>.inner-container>(.item-image>img[src="images/$.png"])+(.item-content>(h2{Item Name $}+p.price{$100.00}+div.rating>(i.fas.fa-star.full*4+i.fas.fa-star-half-alt.half+p.rating-number{4.5})+p.description{Worldwide Shipping}+p.description{available}+p.description{Buyers protection possible!})) -->
@@ -269,6 +269,45 @@
               <p class="description">Buyers protection possible!</p>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="flex justify-end items-center see-more text-secondary">
+        <p>See more</p>
+        <i class="fas fa-arrow-right btn-icon"></i>
+      </div>
+    </section>
+
+    <section id="testimonials" class="container mx-auto mt-100">
+      <h2 class="text-center">Testimonials</h2>
+      <div
+        class="testimonial-container flex justify-center items-center gap-50"
+      >
+        <div class="testimonial flex flex-col justify-center items-center">
+          <img src="images/users/1.svg" alt="" />
+          <h3>Abdul Bari</h3>
+          <p>
+            I've been buying products from influencerproducts.com for a long
+            time. They care about their customers and thats what makes them
+            great.
+          </p>
+        </div>
+        <div class="testimonial flex flex-col justify-center items-center">
+          <img src="images/users/2.svg" alt="" />
+          <h3>Ela Bosak</h3>
+          <p>
+            I've been buying products from influencerproducts.com for a long
+            time. They care about their customers and thats what makes them
+            great.
+          </p>
+        </div>
+        <div class="testimonial flex flex-col justify-center items-center">
+          <img src="images/users/3.svg" alt="" />
+          <h3>Abdul Bari</h3>
+          <p>
+            I've been buying products from influencerproducts.com for a long
+            time. They care about their customers and thats what makes them
+            great.
+          </p>
         </div>
       </div>
     </section>
