--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
             Get all the influencer products at one place. Click on the button
             below to get started with our starter kits.
           </p>
-          <button class="btn btn-primary btn-icon-animation mt-20">
+          <button
+            class="btn btn-primary btn-radius-30 btn-icon-animation mt-20"
+          >
             Prebook now <i class="fas fa-arrow-right btn-icon"></i>
           </button>
         </div>
@@ -277,6 +279,27 @@
       </div>
     </section>
 
+    <section
+      id="featured"
+      class="container mx-auto flex justify-between items-center text-primary mt-100 gap-30"
+    >
+      <div class="flex-item">
+        <img src="images/aaa.png" alt="featured products" />
+      </div>
+      <div class="flex-item">
+        <h2>Featured products at one place</h2>
+        <p>
+          Here you will get all the featured products. These are our most
+          popular products at a reasonable cost. If you are unsure about what to
+          buy, this is the best place to find what you really want. So, stop
+          wasting your time and click on join now to get started.
+        </p>
+        <button class="btn btn-primary">
+          Join Now <i class="fas fa-arrow-right btn-icon"></i>
+        </button>
+      </div>
+    </section>
+
     <section id="testimonials" class="container mx-auto mt-100">
       <h2 class="text-center">Testimonials</h2>
       <div
@@ -311,5 +334,19 @@
         </div>
       </div>
     </section>
+
+    <footer
+      class="flex flex-col justify-center items-center bg-black gap-3 mt-100"
+    >
+      <h3>Influencer products</h3>
+      <p>Copyright © 2020 influencer products</p>
+      <p>All rights reserved</p>
+      <div class="social">
+        <img src="images/icons/Instagram.png" alt="" />
+        <img src="images/icons/Dribbble.png" alt="" />
+        <img src="images/icons/Twitter.png" alt="" />
+        <img src="images/icons/Youtube.png" alt="" />
+      </div>
+    </footer>
   </body>
 </html>
