--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <!-- Header  -->
     <header class="header-container text-primary mx-auto mt-90">
+      <!-- Navbar -->
       <nav id="navbar" class="flex justify-between items-center text-primary">
+        <div class="hamburger-menu">
+          <i class="fas fa-bars"></i>
+        </div>
         <div id="brand" class="text-primary">Influencer products</div>
         <div class="menu">
-          <ul class="flex justify-center align-center">
+          <ul class="flex justify-center align-center menu-items">
             <li><a href="#">Home</a></li>
             <li><a href="#">Products</a></li>
             <li><a href="#">Sign up</a></li>
@@ -69,8 +74,32 @@
             </li>
           </ul>
         </div>
+        <div class="mobile-cart">
+          <a class="text-primary" href="#">
+            <!-- Cart Icon -->
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="ai ai-Cart"
+            >
+              <path
+                d="M5 7h13.79a2 2 0 0 1 1.99 2.199l-.6 6A2 2 0 0 1 18.19 17H8.64a2 2 0 0 1-1.962-1.608L5 7z"
+              />
+              <path d="M5 7l-.81-3.243A1 1 0 0 0 3.22 3H2" />
+              <path d="M8 21h2" />
+              <path d="M16 21h2" />
+            </svg>
+          </a>
+        </div>
       </nav>
-
+      <!-- Start Journey -->
       <section
         id="start-journey"
         class="flex justify-between items-center mt-90"
@@ -93,6 +122,7 @@
       </section>
     </header>
 
+    <!-- Associated Companies -->
     <section id="associated-companies" class="container mx-auto mt-90 py-30">
       <hr />
       <div class="flex justify-between items-center">
@@ -106,170 +136,154 @@
       </div>
       <hr />
     </section>
+
+    <!-- Popular Collections -->
     <section id="collections" class="container mx-auto mt-100">
       <h2 class="text-center">Popular Collections</h2>
-      <div class="collection-items grid">
+      <div class="collection-items grid mb-50">
         <!-- .item*9>.inner-container>(.item-image>img[src="images/$.png"])+(.item-content>(h2{Item Name $}+p.price{$100.00}+div.rating>(i.fas.fa-star.full*4+i.fas.fa-star-half-alt.half+p.rating-number{4.5})+p.description{Worldwide Shipping}+p.description{available}+p.description{Buyers protection possible!})) -->
-        <div class="item mx-auto">
-          <div class="inner-container">
-            <div class="item-image"><img src="images/1.png" alt="" /></div>
-            <div class="item-content">
-              <h2>Item Name 1</h2>
-              <p class="price">$1100.00</p>
-              <div class="rating">
-                <i class="fas fa-star full"></i><i class="fas fa-star full"></i
-                ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
-                ><i class="fas fa-star-half-alt half"></i>
-                <p class="rating-number">4.5</p>
-              </div>
-              <p class="description">Worldwide Shipping</p>
-              <p class="description">available</p>
-              <p class="description">Buyers protection possible!</p>
+        <div class="item">
+          <div class="item-image"><img src="images/1.png" alt="" /></div>
+          <div class="item-content">
+            <h2>Item Name 1</h2>
+            <p class="price">$1100.00</p>
+            <div class="rating">
+              <i class="fas fa-star full"></i><i class="fas fa-star full"></i
+              ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
+              ><i class="fas fa-star-half-alt half"></i>
+              <p class="rating-number">4.5</p>
             </div>
+            <p class="description">Worldwide Shipping</p>
+            <p class="description">available</p>
+            <p class="description">Buyers protection possible!</p>
           </div>
         </div>
-        <div class="item mx-auto">
-          <div class="inner-container">
-            <div class="item-image"><img src="images/2.png" alt="" /></div>
-            <div class="item-content">
-              <h2>Item Name 2</h2>
-              <p class="price">$2100.00</p>
-              <div class="rating">
-                <i class="fas fa-star full"></i><i class="fas fa-star full"></i
-                ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
-                ><i class="fas fa-star-half-alt half"></i>
-                <p class="rating-number">4.5</p>
-              </div>
-              <p class="description">Worldwide Shipping</p>
-              <p class="description">available</p>
-              <p class="description">Buyers protection possible!</p>
+        <div class="item">
+          <div class="item-image"><img src="images/2.png" alt="" /></div>
+          <div class="item-content">
+            <h2>Item Name 2</h2>
+            <p class="price">$2100.00</p>
+            <div class="rating">
+              <i class="fas fa-star full"></i><i class="fas fa-star full"></i
+              ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
+              ><i class="fas fa-star-half-alt half"></i>
+              <p class="rating-number">4.5</p>
             </div>
+            <p class="description">Worldwide Shipping</p>
+            <p class="description">available</p>
+            <p class="description">Buyers protection possible!</p>
           </div>
         </div>
-        <div class="item mx-auto">
-          <div class="inner-container">
-            <div class="item-image"><img src="images/3.png" alt="" /></div>
-            <div class="item-content">
-              <h2>Item Name 3</h2>
-              <p class="price">$3100.00</p>
-              <div class="rating">
-                <i class="fas fa-star full"></i><i class="fas fa-star full"></i
-                ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
-                ><i class="fas fa-star-half-alt half"></i>
-                <p class="rating-number">4.5</p>
-              </div>
-              <p class="description">Worldwide Shipping</p>
-              <p class="description">available</p>
-              <p class="description">Buyers protection possible!</p>
+        <div class="item">
+          <div class="item-image"><img src="images/3.png" alt="" /></div>
+          <div class="item-content">
+            <h2>Item Name 3</h2>
+            <p class="price">$3100.00</p>
+            <div class="rating">
+              <i class="fas fa-star full"></i><i class="fas fa-star full"></i
+              ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
+              ><i class="fas fa-star-half-alt half"></i>
+              <p class="rating-number">4.5</p>
             </div>
+            <p class="description">Worldwide Shipping</p>
+            <p class="description">available</p>
+            <p class="description">Buyers protection possible!</p>
           </div>
         </div>
-        <div class="item mx-auto">
-          <div class="inner-container">
-            <div class="item-image"><img src="images/4.png" alt="" /></div>
-            <div class="item-content">
-              <h2>Item Name 4</h2>
-              <p class="price">$4100.00</p>
-              <div class="rating">
-                <i class="fas fa-star full"></i><i class="fas fa-star full"></i
-                ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
-                ><i class="fas fa-star-half-alt half"></i>
-                <p class="rating-number">4.5</p>
-              </div>
-              <p class="description">Worldwide Shipping</p>
-              <p class="description">available</p>
-              <p class="description">Buyers protection possible!</p>
+        <div class="item">
+          <div class="item-image"><img src="images/4.png" alt="" /></div>
+          <div class="item-content">
+            <h2>Item Name 4</h2>
+            <p class="price">$4100.00</p>
+            <div class="rating">
+              <i class="fas fa-star full"></i><i class="fas fa-star full"></i
+              ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
+              ><i class="fas fa-star-half-alt half"></i>
+              <p class="rating-number">4.5</p>
             </div>
+            <p class="description">Worldwide Shipping</p>
+            <p class="description">available</p>
+            <p class="description">Buyers protection possible!</p>
           </div>
         </div>
-        <div class="item mx-auto">
-          <div class="inner-container">
-            <div class="item-image"><img src="images/5.png" alt="" /></div>
-            <div class="item-content">
-              <h2>Item Name 5</h2>
-              <p class="price">$5100.00</p>
-              <div class="rating">
-                <i class="fas fa-star full"></i><i class="fas fa-star full"></i
-                ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
-                ><i class="fas fa-star-half-alt half"></i>
-                <p class="rating-number">4.5</p>
-              </div>
-              <p class="description">Worldwide Shipping</p>
-              <p class="description">available</p>
-              <p class="description">Buyers protection possible!</p>
+        <div class="item">
+          <div class="item-image"><img src="images/5.png" alt="" /></div>
+          <div class="item-content">
+            <h2>Item Name 5</h2>
+            <p class="price">$5100.00</p>
+            <div class="rating">
+              <i class="fas fa-star full"></i><i class="fas fa-star full"></i
+              ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
+              ><i class="fas fa-star-half-alt half"></i>
+              <p class="rating-number">4.5</p>
             </div>
+            <p class="description">Worldwide Shipping</p>
+            <p class="description">available</p>
+            <p class="description">Buyers protection possible!</p>
           </div>
         </div>
-        <div class="item mx-auto">
-          <div class="inner-container">
-            <div class="item-image"><img src="images/6.png" alt="" /></div>
-            <div class="item-content">
-              <h2>Item Name 6</h2>
-              <p class="price">$6100.00</p>
-              <div class="rating">
-                <i class="fas fa-star full"></i><i class="fas fa-star full"></i
-                ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
-                ><i class="fas fa-star-half-alt half"></i>
-                <p class="rating-number">4.5</p>
-              </div>
-              <p class="description">Worldwide Shipping</p>
-              <p class="description">available</p>
-              <p class="description">Buyers protection possible!</p>
+        <div class="item">
+          <div class="item-image"><img src="images/6.png" alt="" /></div>
+          <div class="item-content">
+            <h2>Item Name 6</h2>
+            <p class="price">$6100.00</p>
+            <div class="rating">
+              <i class="fas fa-star full"></i><i class="fas fa-star full"></i
+              ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
+              ><i class="fas fa-star-half-alt half"></i>
+              <p class="rating-number">4.5</p>
             </div>
+            <p class="description">Worldwide Shipping</p>
+            <p class="description">available</p>
+            <p class="description">Buyers protection possible!</p>
           </div>
         </div>
-        <div class="item mx-auto">
-          <div class="inner-container">
-            <div class="item-image"><img src="images/7.png" alt="" /></div>
-            <div class="item-content">
-              <h2>Item Name 7</h2>
-              <p class="price">$7100.00</p>
-              <div class="rating">
-                <i class="fas fa-star full"></i><i class="fas fa-star full"></i
-                ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
-                ><i class="fas fa-star-half-alt half"></i>
-                <p class="rating-number">4.5</p>
-              </div>
-              <p class="description">Worldwide Shipping</p>
-              <p class="description">available</p>
-              <p class="description">Buyers protection possible!</p>
+        <div class="item">
+          <div class="item-image"><img src="images/7.png" alt="" /></div>
+          <div class="item-content">
+            <h2>Item Name 7</h2>
+            <p class="price">$7100.00</p>
+            <div class="rating">
+              <i class="fas fa-star full"></i><i class="fas fa-star full"></i
+              ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
+              ><i class="fas fa-star-half-alt half"></i>
+              <p class="rating-number">4.5</p>
             </div>
+            <p class="description">Worldwide Shipping</p>
+            <p class="description">available</p>
+            <p class="description">Buyers protection possible!</p>
           </div>
         </div>
-        <div class="item mx-auto">
-          <div class="inner-container">
-            <div class="item-image"><img src="images/8.png" alt="" /></div>
-            <div class="item-content">
-              <h2>Item Name 8</h2>
-              <p class="price">$8100.00</p>
-              <div class="rating">
-                <i class="fas fa-star full"></i><i class="fas fa-star full"></i
-                ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
-                ><i class="fas fa-star-half-alt half"></i>
-                <p class="rating-number">4.5</p>
-              </div>
-              <p class="description">Worldwide Shipping</p>
-              <p class="description">available</p>
-              <p class="description">Buyers protection possible!</p>
+        <div class="item">
+          <div class="item-image"><img src="images/8.png" alt="" /></div>
+          <div class="item-content">
+            <h2>Item Name 8</h2>
+            <p class="price">$8100.00</p>
+            <div class="rating">
+              <i class="fas fa-star full"></i><i class="fas fa-star full"></i
+              ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
+              ><i class="fas fa-star-half-alt half"></i>
+              <p class="rating-number">4.5</p>
             </div>
+            <p class="description">Worldwide Shipping</p>
+            <p class="description">available</p>
+            <p class="description">Buyers protection possible!</p>
           </div>
         </div>
-        <div class="item mx-auto">
-          <div class="inner-container">
-            <div class="item-image"><img src="images/9.png" alt="" /></div>
-            <div class="item-content">
-              <h2>Item Name 9</h2>
-              <p class="price">$9100.00</p>
-              <div class="rating">
-                <i class="fas fa-star full"></i><i class="fas fa-star full"></i
-                ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
-                ><i class="fas fa-star-half-alt half"></i>
-                <p class="rating-number">4.5</p>
-              </div>
-              <p class="description">Worldwide Shipping</p>
-              <p class="description">available</p>
-              <p class="description">Buyers protection possible!</p>
+        <div class="item">
+          <div class="item-image"><img src="images/9.png" alt="" /></div>
+          <div class="item-content">
+            <h2>Item Name 9</h2>
+            <p class="price">$9100.00</p>
+            <div class="rating">
+              <i class="fas fa-star full"></i><i class="fas fa-star full"></i
+              ><i class="fas fa-star full"></i><i class="fas fa-star full"></i
+              ><i class="fas fa-star-half-alt half"></i>
+              <p class="rating-number">4.5</p>
             </div>
+            <p class="description">Worldwide Shipping</p>
+            <p class="description">available</p>
+            <p class="description">Buyers protection possible!</p>
           </div>
         </div>
       </div>
@@ -279,9 +293,10 @@
       </div>
     </section>
 
+    <!-- Featured -->
     <section
       id="featured"
-      class="container mx-auto flex justify-between items-center text-primary mt-100 gap-30"
+      class="container mx-auto flex justify-between items-center text-primary mt-100"
     >
       <div class="flex-item">
         <img src="images/aaa.png" alt="featured products" />
@@ -300,12 +315,14 @@
       </div>
     </section>
 
+    <!-- Testimonials -->
     <section id="testimonials" class="container mx-auto mt-100">
       <h2 class="text-center">Testimonials</h2>
       <div
-        class="testimonial-container flex justify-center items-center gap-50"
+        id="testimonial-container"
+        class="flex justify-center items-center gap-50"
       >
-        <div class="testimonial flex flex-col justify-center items-center">
+        <div class="flex flex-col justify-center items-center testimonial">
           <img src="images/users/1.svg" alt="" />
           <h3>Abdul Bari</h3>
           <p>
@@ -335,8 +352,10 @@
       </div>
     </section>
 
+    <!-- Footer Section -->
     <footer
-      class="flex flex-col justify-center items-center bg-black gap-3 mt-100"
+      id="footer"
+      class="flex flex-col justify-center items-center bg-dark gap-3 mt-100"
     >
       <h3>Influencer products</h3>
       <p>Copyright © 2020 influencer products</p>
