--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- Navbar -->
       <nav id="navbar" class="flex justify-between items-center text-primary">
         <div class="hamburger-menu">
-          <i class="fas fa-bars"></i>
+          <i class="fas fa-bars"> </i>
         </div>
         <div id="brand" class="text-primary">Influencer products</div>
         <div class="menu">
@@ -145,7 +145,7 @@
         <div class="item">
           <div class="item-image"><img src="images/1.png" alt="" /></div>
           <div class="item-content">
-            <h2>Item Name 1</h2>
+            <h2>Action Camera</h2>
             <p class="price">$1100.00</p>
             <div class="rating">
               <i class="fas fa-star full"></i><i class="fas fa-star full"></i
@@ -161,7 +161,7 @@
         <div class="item">
           <div class="item-image"><img src="images/2.png" alt="" /></div>
           <div class="item-content">
-            <h2>Item Name 2</h2>
+            <h2>Earbuds</h2>
             <p class="price">$2100.00</p>
             <div class="rating">
               <i class="fas fa-star full"></i><i class="fas fa-star full"></i
@@ -177,7 +177,7 @@
         <div class="item">
           <div class="item-image"><img src="images/3.png" alt="" /></div>
           <div class="item-content">
-            <h2>Item Name 3</h2>
+            <h2>Vlogging Camera</h2>
             <p class="price">$3100.00</p>
             <div class="rating">
               <i class="fas fa-star full"></i><i class="fas fa-star full"></i
@@ -193,7 +193,7 @@
         <div class="item">
           <div class="item-image"><img src="images/4.png" alt="" /></div>
           <div class="item-content">
-            <h2>Item Name 4</h2>
+            <h2>Drone</h2>
             <p class="price">$4100.00</p>
             <div class="rating">
               <i class="fas fa-star full"></i><i class="fas fa-star full"></i
@@ -209,7 +209,7 @@
         <div class="item">
           <div class="item-image"><img src="images/5.png" alt="" /></div>
           <div class="item-content">
-            <h2>Item Name 5</h2>
+            <h2>Flex Tripod</h2>
             <p class="price">$5100.00</p>
             <div class="rating">
               <i class="fas fa-star full"></i><i class="fas fa-star full"></i
@@ -225,7 +225,7 @@
         <div class="item">
           <div class="item-image"><img src="images/6.png" alt="" /></div>
           <div class="item-content">
-            <h2>Item Name 6</h2>
+            <h2>Light Setup</h2>
             <p class="price">$6100.00</p>
             <div class="rating">
               <i class="fas fa-star full"></i><i class="fas fa-star full"></i
@@ -241,7 +241,7 @@
         <div class="item">
           <div class="item-image"><img src="images/7.png" alt="" /></div>
           <div class="item-content">
-            <h2>Item Name 7</h2>
+            <h2>Green Screen</h2>
             <p class="price">$7100.00</p>
             <div class="rating">
               <i class="fas fa-star full"></i><i class="fas fa-star full"></i
@@ -257,7 +257,7 @@
         <div class="item">
           <div class="item-image"><img src="images/8.png" alt="" /></div>
           <div class="item-content">
-            <h2>Item Name 8</h2>
+            <h2>Microphone</h2>
             <p class="price">$8100.00</p>
             <div class="rating">
               <i class="fas fa-star full"></i><i class="fas fa-star full"></i
@@ -273,7 +273,7 @@
         <div class="item">
           <div class="item-image"><img src="images/9.png" alt="" /></div>
           <div class="item-content">
-            <h2>Item Name 9</h2>
+            <h2>Photoshoot Set</h2>
             <p class="price">$9100.00</p>
             <div class="rating">
               <i class="fas fa-star full"></i><i class="fas fa-star full"></i
