--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
       class="flex flex-col justify-center items-center bg-dark gap-3 mt-100"
     >
       <h3>Influencer products</h3>
-      <p>Copyright © 2020 influencer products</p>
+      <p>Copyright &copy; 2020 influencer products</p>
       <p>All rights reserved</p>
       <div class="social">
         <img src="images/icons/Instagram.png" alt="" />
